2002-01-24  Christopher Faylor  <cgf@redhat.com>

	* speclib: Ensure that temporary def file is removed.

2002-01-23  Christopher Faylor  <cgf@redhat.com>

	* speclib: Use rm -f to remove temp file just to quiet any potential
	warnings.

2002-01-23  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (create_token): Use sec_user() to create
	SECURITY_ATTRIBUTES structure for primary token.  Use
	MAXIMUM_ALLOWED access rights instead of TOKEN_ALL_ACCESS.

2002-01-23  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink): Fix check for already existing file.

2002-01-21  Christopher Faylor  <cgf@redhat.com>

	* cygmagic: Suppress error output when figuring out if sum takes an
	option.

2002-01-21  Christopher Faylor  <cgf@redhat.com>

	* cygmagic: Attempt to figure out if sum takes an option.

2002-01-21  DJ Delorie  <dj@redhat.com>

	* Makefile.in (libpthread.a): Pass the assembler also.
 	(libm.a): Ditto.
	(libc.a): Ditto.
	* speclib: Specify the assembler to dlltool.

2002-01-21  Christopher Faylor  <cgf@redhat.com>

	* include/cygwin/version.h: Bump DLL minor number.

2002-01-21  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (getgrgid): Don't return default gid entry when ntsec is on.
	* syscalls.cc (setegid): Don't set primary group in process token.

2002-01-21  Christopher Faylor  <cgf@redhat.com>

	* speclib: Don't use /dev/null as DLL name.  Just default to what's
	already in .def file.

2002-01-21  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (sig_handle): Remove last vestiges of SA_NOCLDSTOP code
	which caused SIGCHLD to be ignored.

2002-01-20  Christopher Faylor  <cgf@redhat.com>

	* include/cygwin/version.h: Bump DLL minor number.

2002-01-20  Christopher Faylor  <cgf@redhat.com>

	* syscalls.cc (regfree): Make dll_export.

2002-01-20  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (ctrl_c_handler): Convert windows pid to cygwin pid
	when detecting if we should actually handle CTRL-C.
